--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 playwright>=1.40.0
 gspread>=5.12.0
 oauth2client>=4.1.3
+
+# Orchestrator dependencies
+flask>=3.0.0
+flask-cors>=4.0.0
+boto3>=1.34.0
+duckdb>=0.10.0
